--- a/delivery/index.html
+++ b/delivery/index.html
@@ -8,41 +8,46 @@
         <title>Order Confirmation</title>
 
           <body>
-            <h1>Registration Form</h1>
+            <h1>Order Confirmation</h1>
             <p>Please fill out this form with the required information</p>
-            <form method="post" action='https://register-demo.freecodecamp.org'>
+            <form method="post" action='1985kozak@gmail.com'>
               <fieldset>
-                <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text" required /></label>
+                <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text" required pattern="[a-z]{4,}"/></label>
+                <div id="error"></div>
                 <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text" required /></label>
-                <label for="email">Enter Your Email: <input id="email" name="email" type="email" required /></label>
-                <label for="new-password">Create a New Password: <input id="new-password" name="new-password" type="password" pattern="[a-z0-5]{8,}" required /></label>
+                <div id="error1"></div>
+
+                <label for="date" >Enter Delivery Date: <input id="date" name="date" type="date" required /></label>
+                <div id="error2"></div>
+
+                <label for="street">Enter Street: <input id="street" name="street" type="text" pattern="[a-z0-5]{8,}" required /></label>
+                <div id="error3"></div>
+
+                <label for="house">Enter House Number: <input id="house" name="house" type="number" pattern="[0-1000]" required /></label>
+
+                <label for="flat">Enter Flat Number: <input id="flat" name="flat" type="number" pattern="[0-1000/-]" required /></label>
               </fieldset>
               <fieldset>
-                <label for="personal-account"><input id="personal-account" type="radio" name="account-type" class="inline" /> Personal Account</label>
-                <label for="business-account"><input id="business-account" type="radio" name="account-type" class="inline" /> Business Account</label>
-                <label for="terms-and-conditions" name="terms-and-conditions">
-                  <input id="terms-and-conditions" type="checkbox" required name="terms-and-conditions" class="inline" /> I accept the <a href="https://www.freecodecamp.org/news/terms-of-service/">terms and conditions</a>
-                </label>
+                <label for="payment">Choose payment type<input id="payment-cash" type="radio" name="payment" class="inline" /> Cash</label>
+                <label for="payment"><input id="payment-card" type="radio" name="payment" class="inline" /> Card</label>
               </fieldset>
               <fieldset>
-                <label for="profile-picture">Upload a profile picture: <input id="profile-picture" type="file" name="file" /></label>
-                <label for="age">Input your age (years): <input id="age" type="number" name="age" min="13" max="120" /></label>
-                <label for="referrer">How did you hear about us?
-                  <select id="referrer" name="referrer">
-                    <option value="">(select one)</option>
-                    <option value="1">freeCodeCamp News</option>
-                    <option value="2">freeCodeCamp YouTube Channel</option>
-                    <option value="3">freeCodeCamp Forum</option>
-                    <option value="4">Other</option>
+
+                <label for="gift">Please, choose two gifts? <br><br> Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.
+                  <select id="gift" name="gift" multiple>
+                    <option value="">(select two)</option>
+                    <option value="1"><checkpoint>free pack</checkpoint></option>
+                    <option value="2">postcard</option>
+                    <option value="3">2% discount to the next time</option>
+                    <option value="4">branded pen or pencil</option>
                   </select>
                 </label>
-                <label for="bio">Provide a bio:
-                  <textarea id="bio" name="bio" rows="3" cols="30" placeholder="I like coding on the beach..."></textarea>
-                </label>
+
               </fieldset>
               <input type="submit" value="Submit" />
             </form>
           </body>
+          <script src="script.js"></script>
         </html>
 
     </body>
