--- a/delivery/index.html
+++ b/delivery/index.html
@@ -24,8 +24,10 @@
                 <div id="error3"></div>
 
                 <label for="house">Enter House Number: <input id="house" name="house" type="number" pattern="[0-1000]" required /></label>
+                <div id="error4"></div>
 
                 <label for="flat">Enter Flat Number: <input id="flat" name="flat" type="number" pattern="[0-1000/-]" required /></label>
+                <div id="error5"></div>
               </fieldset>
               <fieldset>
                 <label for="payment">Choose payment type<input id="payment-cash" type="radio" name="payment" class="inline" /> Cash</label>
