--- a/delivery/index.html
+++ b/delivery/index.html
@@ -8,6 +8,22 @@
         <title>Order Confirmation</title>
 
           <body>
+
+            <article class="hide-result" style="display: none">
+              <div class="result">
+              <p class="result-title">Order Confirmed</p>
+              <div class="result-data">
+              <div id="result-name"></div>
+              <div id="result-surname"></div>
+              <div id="result-date"></div>
+              <div id="result-street"></div>
+              <div id="result-house"></div>
+              <div id="result-flat"></div>
+              <div id="result-selected"></div>
+            </div></div>
+            </article>
+
+            <div class="order-show">
             <h1>Order Confirmation</h1>
             <p>Please fill out this form with the required information</p>
             <form method="post" action='1985kozak@gmail.com'>
@@ -30,8 +46,9 @@
                 <div id="error5"></div>
               </fieldset>
               <fieldset>
-                <label for="payment">Choose payment type<input id="payment-cash" type="radio" name="payment" class="inline" /> Cash</label>
-                <label for="payment"><input id="payment-card" type="radio" name="payment" class="inline" /> Card</label>
+                <legend>Choose payment type</legend>
+                <label for="payment" ><input id="payment-cash" type="radio" name="payment"  /> Cash</label>
+                <label for="payment"><input id="payment-card" type="radio" name="payment"  class="radio-right"/> Card</label>
               </fieldset>
               <fieldset>
 
@@ -46,17 +63,10 @@
                 </label>
 
               </fieldset>
-              <input type="submit" value="Submit" onclick=showResult/>
+              <input type="submit" value="Submit" class="submit-btn"/>
             </form>
-            <div id="result">
-              <div id="result-name"></div>
-              <div id="result-surname"></div>
-              <div id="result-date"></div>
-              <div id="result-street"></div>
-              <div id="result-house"></div><div id="result-flat"></div>
+          </div>
 
-              <div id="result-selected"></div>
-            </div>
           </body>
           <script src="script.js"></script>
         </html>
