feat: change confirmation result using function

--- a/delivery/index.html
+++ b/delivery/index.html
@@ -12,15 +12,7 @@
             <article class="hide-result" style="display: none">
               <div class="result">
               <p class="result-title">Order Confirmed</p>
-              <div class="result-data">
-              <div id="result-name"></div>
-              <div id="result-surname"></div>
-              <div id="result-date"></div>
-              <div id="result-street"></div>
-              <div id="result-house"></div>
-              <div id="result-flat"></div>
-              <div id="result-selected"></div>
-            </div></div>
+          </div>
             </article>
 
             <div class="order-show">
