--- a/delivery/index.html
+++ b/delivery/index.html
@@ -18,23 +18,23 @@
             <div class="order-show">
             <h1>Order Confirmation</h1>
             <p>Please fill out this form with the required information</p>
-            <form method="post" action='1985kozak@gmail.com'>
+            <form method="post">
               <fieldset>
-                <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text" required pattern="[a-z]{4,}"/></label>
+                <label for="first-name">Enter Your First Name: <input id="first-name" name="first-name" type="text" required pattern="[a-z]{4,}" class="required" onkeyup="enableSubmit()"/></label>
                 <div id="error"></div>
-                <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text" required /></label>
+                <label for="last-name">Enter Your Last Name: <input id="last-name" name="last-name" type="text" required class="required" onkeyup="enableSubmit()"/></label>
                 <div id="error1"></div>
 
-                <label for="date" >Enter Delivery Date: <input id="date" name="date" type="date" required /></label>
+                <label for="date" class="date-not-earlier">Enter Delivery Date: <input id="date" name="date" type="date" required class="required" onkeyup="enableSubmit()"/></label>
                 <div id="error2"></div>
 
-                <label for="street">Enter Street: <input id="street" name="street" type="text" pattern="[a-z0-5]{8,}" required /></label>
+                <label for="street">Enter Street: <input id="street" name="street" type="text" pattern="[a-z0-5]{8,}" required class="required" onkeyup="enableSubmit()"/></label>
                 <div id="error3"></div>
 
-                <label for="house">Enter House Number: <input id="house" name="house" type="number" pattern="[0-1000]" required /></label>
+                <label for="house">Enter House Number: <input id="house" name="house" type="number" pattern="[0-1000]" required class="required" onkeyup="enableSubmit()"/></label>
                 <div id="error4"></div>
 
-                <label for="flat">Enter Flat Number: <input id="flat" name="flat" type="number" pattern="[0-1000/-]" required /></label>
+                <label for="flat">Enter Flat Number: <input id="flat" name="flat" type="number" pattern="[0-1000/-]" required class="required" onkeyup="enableSubmit()"/></label>
                 <div id="error5"></div>
               </fieldset>
               <fieldset>
@@ -55,7 +55,7 @@
                 </label>
 
               </fieldset>
-              <input type="submit" value="Submit" class="submit-btn"/>
+              <input type="submit" value="Submit" class="submit-btn" disabled/>
             </form>
           </div>
 
