feat: add validations

--- a/delivery/index.html
+++ b/delivery/index.html
@@ -34,7 +34,7 @@
                 <label for="house">Enter House Number: <input id="house" name="house" type="number" pattern="[0-1000]" required class="required" onkeyup="enableSubmit()"/></label>
                 <div id="error4"></div>
 
-                <label for="flat">Enter Flat Number: <input id="flat" name="flat" type="number" pattern="[0-1000/-]" required class="required" onkeyup="enableSubmit()"/></label>
+                <label for="flat">Enter Flat Number: <input id="flat" name="flat" type="number" pattern="[0-1000/-]" required class="required" onkeyup="enableSubmit()" pattern="[1-9/-]"/></label>
                 <div id="error5"></div>
               </fieldset>
               <fieldset>
