--- a/delivery/index.html
+++ b/delivery/index.html
@@ -39,7 +39,7 @@
               </fieldset>
               <fieldset>
                 <legend>Choose payment type</legend>
-                <label for="payment" ><input id="payment-cash" type="radio" name="payment"  class="required" required required class="required" onkeyup="enableSubmit()" checked/> Cash</label>
+                <label for="payment" ><input id="payment-cash" type="radio" name="payment"  class="required" required class="required" onkeyup="enableSubmit()" checked/> Cash</label>
                 <label for="payment"><input id="payment-card" type="radio" name="payment"  class="radio-right"  /> Card</label>
               </fieldset>
               <fieldset>
