feat: add close btn to delivery

--- a/delivery/index.html
+++ b/delivery/index.html
@@ -39,8 +39,8 @@
               </fieldset>
               <fieldset>
                 <legend>Choose payment type</legend>
-                <label for="payment" ><input id="payment-cash" type="radio" name="payment"  class="required" required class="required" onkeyup="enableSubmit()" checked/> Cash</label>
-                <label for="payment"><input id="payment-card" type="radio" name="payment"  class="radio-right"  /> Card</label>
+                <label for="payment" ><input id="payment-cash" class="check" type="radio" name="payment"  class="required" required onkeyup="enableSubmit()" /> Cash</label>
+                <label for="payment"><input id="payment-card" class="check" type="radio" name="payment"  class="radio-right"  /> Card</label>
               </fieldset>
               <fieldset>
 
