feat: add functionality to close btn(delivery)

--- a/delivery/index.html
+++ b/delivery/index.html
@@ -9,7 +9,7 @@
 
           <body>
 
-            <article class="hide-result" style="display: none">
+            <article class="hide-result"  class="show-result">
               <div class="result">
               <p class="result-title">Order Confirmed</p>
           </div>
