feat: add styles to radio btns

--- a/delivery/index.html
+++ b/delivery/index.html
@@ -29,8 +29,8 @@
                 <div id="error2"></div>
 
                 <div class="label-margin">Choose payment type</div>
-                <label for="payment" ><input id="payment-cash" class="check" type="radio" name="payment"  class="required" required onkeyup="enableSubmit()" /> Cash</label>
-                <label for="payment" ><input id="payment-card" class="required" class="check" type="radio" name="payment"  class="radio-right" onkeyup="enableSubmit()" required /> Card</label>
+                <label for="payment" ><input id="payment-cash" type="radio" name="payment"  class="required" required onkeyup="enableSubmit()" /> Cash</label>
+                <label for="payment" ><input id="payment-card" class="required radio-right" type="radio" name="payment"  onkeyup="enableSubmit()" required /> Card</label>
 
                 <label class="block-label" class="label-margin" for="street">Enter Street: <input id="street" name="street" type="text" pattern="[a-z0-5]{8,}" required class="required" onkeyup="enableSubmit()"/></label>
                 <div id="error3"></div>
