--- a/delivery/index.html
+++ b/delivery/index.html
@@ -42,19 +42,17 @@
                 <div id="error5"></div>
               </fieldset>
 
-              <fieldset>
 
-                <label for="gift">Please, choose two gifts? <br><br> Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.
-                  <select id="gift" name="gift" multiple onchange=selectedOptions()>
-                    <option value="">(select two)</option>
-                    <option value="1"><checkpoint>free pack</checkpoint></option>
-                    <option value="2">postcard</option>
-                    <option value="3">2% discount to the next time</option>
-                    <option value="4">branded pen or pencil</option>
-                  </select>
-                </label>
+                <div for="gift">Please, choose two gifts (optional)</div><br>
+                <label for="gift1"></label><input type="checkbox" class="check" id="gift1" name="gift1" value="Bike">
+                 pack as a gift</label><br>
+                <label for="gift2"></label><input type="checkbox" class="check" id="gift2" name="gift2" value="Car">
+                 add postcard</label><br>
+                <label for="gift3"></label><input type="checkbox" class="check" id="gift3" name="gift3" value="Bike">
+                 2% discount to the next time</label><br>
+                <label for="gift4"></label><input type="checkbox" class="check" id="gift4" name="gift4" value="Boat">
+                 branded pen or pencil</label><br><br>
 
-              </fieldset>
               <input type="submit" value="Submit" class="submit-btn" disabled/>
             </form>
           </div>
