feat: add logo to delivery

--- a/delivery/index.html
+++ b/delivery/index.html
@@ -8,7 +8,9 @@
         <title>Order Confirmation</title>
 
           <body>
-
+<header>
+  <a href="/index.html"><img src="/images/logo-gif.gif" alt="logo" class="logo-gif"></a>
+</header>
             <article class="hide-result"  class="show-result">
               <div class="result">
               <p class="result-title">Order Confirmed</p>
