feat: change link path of logo

--- a/delivery/index.html
+++ b/delivery/index.html
@@ -9,7 +9,7 @@
 
           <body>
 <header>
-  <a href="/index.html"><img src="../images/logo-gif.gif" alt="logo" class="logo-gif"></a>
+  <a href="../index.html"><img src="../images/logo-gif.gif" alt="logo" class="logo-gif"></a>
 </header>
             <article class="hide-result"  class="show-result">
               <div class="result">
